feat: 知识问答只回一篇带标题摘录，问法侧加小同义表